default/onlyoffice/base/onlyoffice-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: onlyoffice
  name: onlyoffice
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: onlyoffice-server
